--- a/confuson-heatmap.ipynb
+++ b/confuson-heatmap.ipynb
@@ -10,8 +10,9 @@
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
     "\n",
-    "plt.figure(figsize=(70,60))\n",
-    "confmat=np.random.rand(5000,5000)\n",
+    "#plt.figure(figsize=(70, 60))\n",
+    "plt.figure(figsize=(20, 20))\n",
+    "confmat=np.random.rand(5000, 5000)\n",
     "#ticks=np.linspace(0, 4999, num=5000)\n",
     "plt.imshow(confmat, interpolation='none')\n",
     "plt.colorbar()\n",
