--- a/whale-id-all.ipynb
+++ b/whale-id-all.ipynb
@@ -22,7 +22,12 @@
     "\n",
     "%matplotlib inline\n",
     "\n",
-    "np.random.seed(100)"
+    "np.random.seed(100)\n",
+    "\n",
+    "batch_size = 64\n",
+    "image_side_size = 150\n",
+    "\n",
+    "target_size = (image_side_size, image_side_size)"
    ]
   },
   {
@@ -333,11 +338,6 @@
    "source": [
     "from keras.preprocessing.image import ImageDataGenerator\n",
     "\n",
-    "batch_size = 64\n",
-    "image_side_size = 150\n",
-    "\n",
-    "target_size = (image_side_size, image_side_size)\n",
-    "\n",
     "train_datagen = ImageDataGenerator(\n",
     "        rescale=1./255,\n",
     "        horizontal_flip=True,\n",
@@ -423,7 +423,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Top layer specific to our problem"
+    "# Top layer specific to the problem"
    ]
   },
   {
@@ -470,6 +470,13 @@
     "model.compile(loss='categorical_crossentropy', \n",
     "              optimizer=RMSprop(lr=0.0001), \n",
     "              metrics=['accuracy','mean_squared_error'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Train the model"
    ]
   },
   {
@@ -533,7 +540,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.load_weights(best_weights_path)"
+    "from keras.models import load_model\n",
+    "model = load_model('whale.flukes.4250_classes.weights.best.hdf5')"
    ]
   },
   {
@@ -549,6 +557,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from keras.preprocessing.image import ImageDataGenerator\n",
+    "\n",
     "test_datagen = ImageDataGenerator(rescale=1. / 255)\n",
     "\n",
     "test_generator = test_datagen.flow_from_directory(\n",
@@ -558,21 +568,36 @@
     "    class_mode='categorical', shuffle=False)\n",
     "\n",
     "score = model.evaluate_generator(\n",
-    "    generator=test_generator, \n",
-    "    workers=workers)\n",
+    "    generator=test_generator)\n",
     "\n",
     "print(\"Loss: \", score[0], \"Accuracy: \", score[1])\n",
     "\n",
     "scores = model.predict_generator(\n",
-    "    generator=test_generator, \n",
-    "    workers=workers)"
+    "    generator=test_generator)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Print confusion matrix"
+    "# Genegate confusion matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import confusion_matrix\n",
+    "cnf_matrix = confusion_matrix(test_generator.classes, list(map(lambda x: np.argmax(x), scores)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Plot confusion matrix"
    ]
   },
   {
@@ -583,6 +608,9 @@
    "source": [
     "from sklearn.metrics import confusion_matrix\n",
     "import itertools\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "%matplotlib inline\n",
     "\n",
     "def plot_confusion_matrix(cm, classes,\n",
     "                          normalize=False,\n",
@@ -616,16 +644,22 @@
     "    plt.ylabel('True label')\n",
     "    plt.xlabel('Predicted label')\n",
     "\n",
-    "cnf_matrix = confusion_matrix(test_generator.classes, list(map(lambda x: np.argmax(x), scores)))\n",
+    "def plot_confusion_heatmap(cm):\n",
+    "    plt.imshow(cm, interpolation='none')\n",
+    "    plt.colorbar()\n",
+    "    \n",
     "np.set_printoptions(precision=2)\n",
     "\n",
     "# Plot non-normalized confusion matrix\n",
-    "plt.figure(figsize=(80,20))\n",
-    "plot_confusion_matrix(cnf_matrix, classes=classes, title='Confusion matrix, without normalization')\n",
+    "# plt.figure(figsize=(20,20))\n",
+    "# plot_confusion_matrix(cnf_matrix, classes=classes, title='Confusion matrix, without normalization')\n",
     "\n",
     "# Plot normalized confusion matrix\n",
-    "plt.figure(figsize=(80,20))\n",
-    "plot_confusion_matrix(cnf_matrix, classes=classes, normalize=True, title='Normalized confusion matrix')\n",
+    "# plt.figure(figsize=(20,20))\n",
+    "# plot_confusion_matrix(cnf_matrix, classes=classes, normalize=True, title='Normalized confusion matrix')\n",
+    "\n",
+    "plt.figure(figsize=(20, 20))\n",
+    "plot_confusion_heatmap(cnf_matrix)\n",
     "\n",
     "plt.show()"
    ]
