classify changes mainly

--- a/classify.ipynb
+++ b/classify.ipynb
@@ -96,7 +96,7 @@
     "    return np.expand_dims(x, axis=0)\n",
     "\n",
     "def whale_id(generator, predicted_index):\n",
-    "    return [key for key, value in test_generator.class_indices.items() if value == predicted_index][0]\n",
+    "    return [key for key, value in generator.class_indices.items() if value == predicted_index][0]\n",
     "\n",
     "def display_image(path):\n",
     "    if path is None:\n",
@@ -153,6 +153,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Predict known new_whale images"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -162,6 +169,7 @@
     "import pathlib\n",
     "import shutil\n",
     "from keras.preprocessing.image import ImageDataGenerator\n",
+    "import numpy as np\n",
     "\n",
     "df = pd.read_csv(\"train.csv\", header = 0)\n",
     "\n",
@@ -185,7 +193,37 @@
     "\n",
     "new_whale_scores = model.predict_generator(\n",
     "    generator=new_whale_generator,\n",
-    "    workers=8)"
+    "    workers=8)\n",
+    "\n",
+    "np.save('new_whale_scores', new_whale_scores)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import pathlib\n",
+    "import shutil\n",
+    "from keras.preprocessing.image import ImageDataGenerator\n",
+    "import numpy as np\n",
+    "\n",
+    "datagen = ImageDataGenerator(rescale=1. / 255)\n",
+    "\n",
+    "final_generator = datagen.flow_from_directory(\n",
+    "    \"data/final\",\n",
+    "    target_size=target_size,\n",
+    "    batch_size=1,\n",
+    "    class_mode=None, \n",
+    "    shuffle=False)\n",
+    "\n",
+    "final_whale_scores = model.predict_generator(\n",
+    "    generator=final_generator,\n",
+    "    workers=8)\n",
+    "\n",
+    "np.save('final_whale_scores', final_whale_scores)"
    ]
   },
   {
@@ -224,13 +262,44 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "import random\n",
     "\n",
-    "for i in new_whale_scores[:10]:\n",
-    "    print(sorted(i,reverse=True)[:10])\n",
-    "    print(f'Predictive mean: {np.mean(i, axis=0)}')\n",
-    "    print(f'Predictive variance: {np.var(i, axis=0)}')\n",
-    "    print(f'Predictive std: {np.std(i)}')"
+    "train_classes = np.load('train_classes.npy')\n",
+    "final_whale_scores = np.load('final_whale_scores.npy')\n",
+    "df = pd.read_csv(\"train.csv\", header = 0)\n",
+    "\n",
+    "for_review = [image_scores for image_scores in final_whale_scores if np.amax(image_scores) > 0.99]\n",
+    "print(f'Reviewing labels of {len(for_review)} top predictions')\n",
+    "\n",
+    "# for_review = random.sample(list(final_whale_scores), 5)\n",
+    "# print(f'Reviewing labels of {len(for_review)} random images')\n",
+    "\n",
+    "for idx, value in enumerate(for_review):\n",
+    "    print(\"-\"*50)\n",
+    "    print(f'Predicting: {final_generator.filenames[idx]}')\n",
+    "    display_image(f'data/final/{final_generator.filenames[idx]}')\n",
+    "    \n",
+    "    predicted_index = np.argmax(value)\n",
+    "    whale_id = train_classes[predicted_index]\n",
+    "    print(f'Predicted index: {predicted_index} whale id: {whale_id}')\n",
+    "    \n",
+    "    print('Top predictions:')\n",
+    "    print(sorted(value,reverse=True)[:5])\n",
+    "    \n",
+    "    print(f'Predictive mean: {np.mean(value, axis=0)}')\n",
+    "    print(f'Predictive variance: {np.var(value, axis=0)}')\n",
+    "    print(f'Predictive std: {np.std(value)}')\n",
+    "    \n",
+    "    for file in df[df.Id == whale_id].Image[:2]:\n",
+    "        display_image(f'./train/{file}')\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
