--- a/whale-id-all.ipynb
+++ b/whale-id-all.ipynb
@@ -364,7 +364,9 @@
     "        'data/valid',\n",
     "        target_size = target_size,\n",
     "        class_mode = 'categorical',\n",
-    "        batch_size = batch_size)"
+    "        batch_size = batch_size)\n",
+    "\n",
+    "np.save('train_classes', [*train_generator.class_indices])"
    ]
   },
   {
