--- a/classify.ipynb
+++ b/classify.ipynb
@@ -36,8 +36,15 @@
     "    \"data/test\",\n",
     "    target_size=target_size,\n",
     "    batch_size=batch_size,\n",
-    "    class_mode='categorical', shuffle=False)\n",
-    "\n",
+    "    class_mode='categorical', shuffle=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "score = model.evaluate_generator(\n",
     "    generator=test_generator)\n",
     "\n",
@@ -217,8 +224,15 @@
     "    target_size=target_size,\n",
     "    batch_size=1,\n",
     "    class_mode=None, \n",
-    "    shuffle=False)\n",
-    "\n",
+    "    shuffle=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "final_whale_scores = model.predict_generator(\n",
     "    generator=final_generator,\n",
     "    workers=8)\n",
@@ -239,8 +253,15 @@
     "    target_size=target_size,\n",
     "    batch_size=128,\n",
     "    class_mode=None, \n",
-    "    shuffle=False)\n",
-    "\n",
+    "    shuffle=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "test_scores = model.predict_generator(\n",
     "    generator=test_generator,\n",
     "    workers=8)"
