--- a/classify.ipynb
+++ b/classify.ipynb
@@ -298,13 +298,20 @@
    "source": [
     "import numpy as np\n",
     "import random\n",
+    "import ntpath\n",
+    "\n",
+    "NUM_PREDICTIONS = 5\n",
+    "NEW_WHALE_TRESHHOLD = 0.9\n",
+    "\n",
+    "def getValue(item):\n",
+    "    return item[1]    \n",
     "\n",
     "train_classes = np.load('train_classes.npy')\n",
     "final_whale_scores = np.load('final_whale_scores.one-worker.npy')\n",
     "df_whale_id_2_files = pd.read_csv(\"train.csv\", header = 0)\n",
     "\n",
-    "for_review = [(idx,image_scores) for idx, image_scores in enumerate(final_whale_scores) if 0.95 < np.amax(image_scores) <= 1]\n",
-    "for_review = for_review[:7]\n",
+    "for_review = [(idx,image_scores) for idx, image_scores in enumerate(final_whale_scores) if NEW_WHALE_TRESHHOLD <= np.amax(image_scores)]\n",
+    "for_review = for_review[:1]\n",
     "print(f'Reviewing labels of {len(for_review)} top predictions')\n",
     "\n",
     "# for_review = random.sample(list(enumerate(final_whale_scores)), 3)\n",
@@ -312,29 +319,96 @@
     "\n",
     "for v in for_review:\n",
     "    index = v[0]\n",
-    "    value = v[1]\n",
+    "    scores = v[1]\n",
     "\n",
-    "    print(\"-\"*50)\n",
+    "    print(\"=\" * 100)\n",
     "    \n",
     "    file_to_predict = final_generator.filenames[index]\n",
     "    print(f'Predicting: {file_to_predict}')\n",
     "    display_image(f'data/final/{file_to_predict}')\n",
     "    \n",
-    "    predicted_index = np.argmax(value)\n",
+    "    print('Top predictions:')\n",
+    "    top_probs = sorted(list(enumerate(scores)), key=getValue, reverse=True)[:NUM_PREDICTIONS]\n",
+    "    print(top_probs)\n",
+    "    \n",
+    "    top_labels = list(map(lambda x: train_classes[x[0]], top_probs))\n",
+    "    max_prob = top_probs[0][1]\n",
+    "    print(f'Original labels: {top_labels}')\n",
+    "    if max_prob < NEW_WHALE_TRESHHOLD:\n",
+    "        top_labels.insert(0, 'new_whale')\n",
+    "        top_labels = top_labels[:NUM_PREDICTIONS]\n",
+    "        print(f'Modified labels: {top_labels}')\n",
+    "     \n",
+    "    predicted_index = top_probs[0][0]\n",
     "    whale_id = train_classes[predicted_index]\n",
+    "    \n",
     "    print(f'Predicted index: {predicted_index} whale id: {whale_id}')\n",
     "    \n",
-    "    print('Top predictions:')\n",
-    "    print(sorted(value, reverse=True)[:5])\n",
-    "    print(value.argsort()[::-1][:5])\n",
-    "    \n",
-    "    print(f'Predictive mean: {np.mean(value, axis=0)}')\n",
-    "    print(f'Predictive variance: {np.var(value, axis=0)}')\n",
-    "    print(f'Predictive std: {np.std(value)}')\n",
+    "    print(f'Predictive mean: {np.mean(scores, axis=0)}')\n",
+    "    print(f'Predictive variance: {np.var(scores, axis=0)}')\n",
+    "    print(f'Predictive std: {np.std(scores)}')\n",
     "    \n",
     "    for file in df_whale_id_2_files[df_whale_id_2_files.Id == whale_id].Image[:2]:\n",
-    "        display_image(f'./train/{file}')\n"
+    "        display_image(f'./train/{file}')\n",
+    "\n",
+    "\n",
+    "# Write classification result"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import csv\n",
+    "import ntpath\n",
+    "import numpy as np\n",
+    "from keras.preprocessing.image import ImageDataGenerator\n",
+    "\n",
+    "datagen = ImageDataGenerator(rescale=1. / 255)\n",
+    "\n",
+    "final_generator = datagen.flow_from_directory(\n",
+    "    \"data/final\",\n",
+    "    target_size=target_size,\n",
+    "    batch_size=1,\n",
+    "    class_mode=None, \n",
+    "    shuffle=False)\n",
+    "\n",
+    "NUM_PREDICTIONS = 5\n",
+    "NEW_WHALE_TRESHHOLD = 1.0\n",
+    "\n",
+    "def getScore(item):\n",
+    "    return item[1]    \n",
+    "\n",
+    "train_classes = np.load('train_classes.npy')\n",
+    "final_whale_scores = np.load('final_whale_scores.one-worker.npy')\n",
+    "\n",
+    "with open(f'predictions-{NEW_WHALE_TRESHHOLD}.csv', 'w') as csvfile:\n",
+    "    fieldnames = ['Image', 'Id']\n",
+    "    writer = csv.DictWriter(csvfile, fieldnames=fieldnames)\n",
+    "\n",
+    "    writer.writeheader()\n",
+    "    \n",
+    "    for index, scores in enumerate(final_whale_scores):\n",
+    "\n",
+    "        file_to_predict = final_generator.filenames[index]\n",
+    "        top_probs = sorted(list(enumerate(scores)), key=lambda i: i[1], reverse=True)[:NUM_PREDICTIONS]\n",
+    "\n",
+    "        top_labels = list(map(lambda x: train_classes[x[0]], top_probs))\n",
+    "        max_prob = top_probs[0][1]\n",
+    "        if max_prob < NEW_WHALE_TRESHHOLD:\n",
+    "            top_labels.insert(0, 'new_whale')\n",
+    "            top_labels = top_labels[:NUM_PREDICTIONS]\n",
+    "        writer.writerow(dict(zip(fieldnames, [ntpath.basename(file_to_predict), ' '.join(top_labels)])))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
