--- a/classify.ipynb
+++ b/classify.ipynb
@@ -349,10 +349,7 @@
     "    print(f'Predictive std: {np.std(scores)}')\n",
     "    \n",
     "    for file in df_whale_id_2_files[df_whale_id_2_files.Id == whale_id].Image[:2]:\n",
-    "        display_image(f'./train/{file}')\n",
-    "\n",
-    "\n",
-    "# Write classification result"
+    "        display_image(f'./train/{file}')"
    ]
   },
   {
@@ -376,7 +373,7 @@
     "    shuffle=False)\n",
     "\n",
     "NUM_PREDICTIONS = 5\n",
-    "NEW_WHALE_TRESHHOLD = 1.0\n",
+    "NEW_WHALE_TRESHHOLD = 0.95\n",
     "\n",
     "def getScore(item):\n",
     "    return item[1]    \n",
@@ -397,7 +394,7 @@
     "\n",
     "        top_labels = list(map(lambda x: train_classes[x[0]], top_probs))\n",
     "        max_prob = top_probs[0][1]\n",
-    "        if max_prob < NEW_WHALE_TRESHHOLD:\n",
+    "        if max_prob <= NEW_WHALE_TRESHHOLD:\n",
     "            top_labels.insert(0, 'new_whale')\n",
     "            top_labels = top_labels[:NUM_PREDICTIONS]\n",
     "        writer.writerow(dict(zip(fieldnames, [ntpath.basename(file_to_predict), ' '.join(top_labels)])))"
