Add some comments

--- a/classify.ipynb
+++ b/classify.ipynb
@@ -280,6 +280,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Infer labels of final test whale set"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
@@ -332,6 +339,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# For testing"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -365,6 +379,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Review prediction results\n",
     "# What My Deep Model Doesn't Know...\n",
     "\n",
     "http://mlg.eng.cam.ac.uk/yarin/blog_3d801aa532c1ce.html"
@@ -483,6 +498,13 @@
     "    \n",
     "    for file in df_whale_id_2_files[df_whale_id_2_files.Id == whale_id].Image[:2]:\n",
     "        display_image(f'./train/{file}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Score unlabeled whales and generate a report"
    ]
   },
   {
