--- a/classify.ipynb
+++ b/classify.ipynb
@@ -504,7 +504,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Score unlabeled whales and generate a report"
+    "# <a name=\"predict\"></a> Predict unlabeled whales and generate a report"
    ]
   },
   {
